kubernetes/kluctl/apps/go-backend/Deployment.go-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-backend
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-backend
  template:
    metadata:
      labels:
        app: go-backend
    spec:
      containers:
        - name: go-backend
          image: 857059614049.dkr.ecr.us-east-2.amazonaws.com/services/go-backend:ec005d686cb683eaadf3edcfba6fb3d3c624d623
