kubernetes/kluctl/apps/go-backend/Gateway.minimal-envoy.yaml
# Generated with ingress2gateway print --providers=ingress-nginx -A
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minimal-envoy
  namespace: apps
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - hostname: gateway-envoy.staging.kubestarterkit.com
      name: ingress-example-envoy-com-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minimal-envoy
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gateway-envoy.staging.kubestarterkit.com
spec:
  hostnames:
    - gateway-envoy.staging.kubestarterkit.com
  parentRefs:
    - name: minimal-envoy
  rules:
    - backendRefs:
        - name: go-backend
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
